--- a/basis/termen.html
+++ b/basis/termen.html
@@ -28,34 +28,59 @@
     <h1>Belangrijke termen</h1>
   </header>
   <main class="termen content-with-nav">
-
-
-
     <div class="content-inner">
       <div class="termen-info">
         <!-- <img id="information-icon" src="../public/afbeeldingen/information.png"> -->
         <p>
-          Vanaf je zelf opzoekwerk begint te doen, zal je veel termen tegenkomen (artikels, trainingsschema's,...). Het is belangrijk dat je weet wat ze betekenen.
+          Vanaf je zelf opzoekwerk begint te doen, zal je veel termen tegenkomen (artikels, trainingsschema's, ...). Het is belangrijk dat je weet wat ze betekenen. Hieronder volgt een lijst van de meest gebruikte fitnesstermen.
         </p>
       </div>
     </div>
 
     <ul>
       <li>
-        <h3>AMRAP</h3>
-        <p>Dit betekent het 'uitdagen' van je spieren. Iedere training ga je een stapje verder dan de vorige, ofwel in het aantal herhalingen, ofwel in gewicht.</p>
+        <h3>Reps</h3>
+        <p>Het aantal reps is het aantal <span id="highlight-text-blauw">herhalingen</span> per set dat je een oefening uitvoert.</p>
+      </li>
+      <li>
+        <h3>Compound oefeningen</h3>
+        <p>Dit zijn zware oefeningen waarmee je <span id="highlight-text-blauw">verschillende spiergroepen</span> traint. Een voorbeeld is de Bench Press, waarbij je zowel je borst, triceps als schouders traint.
+        De eerste maanden zijn compound oefeningen van <span id="highlight-text-blauw">groot belang</span>. Hoe meer spieren je tegelijk kan trainen, hoe sneller je gespierder zal worden.
+      </p>
+      </li>
+      <li>
+        <h3>Geïsoleerde oefeningen</h3>
+        <p>Dit is het tegenovergestelde van compound oefeningen. Je <span id="highlight-text-blauw">isoleert</span> één spier per oefening. Een voorbeeld is de Bicep Curl, waarmee je enkel je biceps aanspreekt.</p>
+      </li>
+      <li>
+        <h3>Dumbbell</h3>
+        <p>Ook wel een halter genoemd. Dit zijn de losse gewichten die je in het rek ziet liggen.</p>
+      </li>
+      <li>
+        <h3>Barbell</h3>
+        <p>Ook wel halterstang genoemd. Dit is de langere staaf waar je langs beide kanten zelf gewicht aan kan hangen.</p>
+      </li>
+      <li>
+        <h3>Cardio</h3>
+        <p>Cardio is het trainen van je conditie, uithouding. Dit doe je vooral op een fiets, loopband of roeimachine. Voor jouw krachttraining is het aangeraden om 5 tot 10 minuten cardio te doen.
+        Dit verhoogt je lichaamstemperatuur, wat een positief effect heeft op de rest van je krachttraining.</p>
+      </li>
+      <li>
+        <h3>Supersets</h3>
+        <p>Dit is een combinatie van 2 oefeningen die je <span id="highlight-text-blauw">meteen achter elkaar</span> uitvoert, maar niet met dezelfde spiergroep. Een voorbeeld is beginnen met de Triceps Pushdown, waarme je de triceps
+        traint, gevolgd door een Bicep Curl, waarmee je de biceps traint.</p>
       </li>
       <li>
         <h3>AMRAP</h3>
-        <p>TAs Many Reps As Possible, wat betekent dat je zoveel mogelijk herhalingen zal doen dat je aankan.</p>
+        <p>As Many Reps As Possible, wat betekent dat je <span id="highlight-text-blauw">zoveel mogelijk</span> herhalingen zal doen dat je aankan.</p>
       </li>
       <li>
-        <h3>AMRAP</h3>
-        <p>Test dit is een test van dezelfde lengte als de andere tekst. NOg wat extra tekst en blabbalabla enzovoor teae x</p>
+        <h3>Progressive overload</h3>
+        <p>Dit betekent het 'uitdagen' van je spieren. Iedere training of week ga je een stapje verder dan de vorige, ofwel in het aantal herhalingen, ofwel in gewicht.</p>
       </li>
       <li>
-        <h3>AMRAP</h3>
-        <p>Test dit is een test van dezelfde lengte als de andere tekst. NOg wat extra tekst en blabbalabla enzovoor teae x</p>
+        <h3>1RM</h3>
+        <p>Dit staat voor <span id="highlight-text-blauw">1 Rep Max</span>, wat betekent dat je een gewicht kiest waarmee je slechts één herhaling mee kan uitvoeren. Je 1RM wordt voornamelijk gebruikt om vooruitgang te bekijken.</p>
       </li>
     </ul>
 
