--- a/oefeningen/abs/overzicht.html
+++ b/oefeningen/abs/overzicht.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,8 +22,8 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow.png"></a>
-    <h1>Abs</h1>
+    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow-black.png"></a>
+    <h1>Buik (Abs)</h1>
   </header>
 
   <main class="content-with-nav">
@@ -30,50 +31,52 @@
     <div class="content-inner">
       <img src="../../public/afbeeldingen/Abs-oef.png" id="spier-img">
       <a id="meer-info-btn" href="informatie.html">Meer informatie</a>
-      <!-- <ul class="oefeningen-lijst">
-        <a href="dumbbell_shoulder_press.html"><li>
-          <h3>Dumbbell shoulder press</h3>
+    </div>
+
+    <!-- <ul class="oefeningen-lijst">
+      <a href="dumbbell_shoulder_press.html"><li>
+        <h3>Dumbbell shoulder press</h3>
+        <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
+        </li>
+        </a>
+
+        <a href="#"><li>
+          <h3>Arnold press</h3>
           <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
           </li>
           </a>
 
           <a href="#"><li>
-            <h3>Arnold press</h3>
+            <h3>Dumbbell front raise</h3>
             <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
             </li>
             </a>
 
-            <a href="#"><li>
-              <h3>Dumbbell front raise</h3>
+            <a href="#"><li id="last-exercise">
+              <h3>Dumbbell side raise</h3>
               <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
               </li>
               </a>
+      </ul> -->
 
-              <a href="#"><li id="last-exercise">
-                <h3>Dumbbell side raise</h3>
-                <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
-                </li>
-                </a>
-        </ul> -->
-    </div>
   </main>
 
   <footer id="footer-rood">
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis.png"></a>
+          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen.png"></a>
-        <p>Oefeningen</p>
+          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
       </div>
     </li>
       <li>
         <div>
-          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding.png"></a>
+          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
