--- a/oefeningen/borst/incline_dumbbell_press.html
+++ b/oefeningen/borst/incline_dumbbell_press.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +22,7 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Incline dumbbell press</h1>
   </header>
 
@@ -32,9 +33,9 @@
     <div class="content-inner">
       <h3>Focus op:</h3>
       <div class="focus-spier">
-        <a class="primaire-spier" href="#">Borst</a>
-        <a class="secundaire-spier" href="#">Triceps</a>
-        <a class="secundaire-spier" href="#">Schouders</a>
+        <a class="primaire-spier" href="informatie.html">Borst</a>
+        <a class="secundaire-spier" href="../triceps/informatie.html">Triceps</a>
+        <a class="secundaire-spier" href="../schouders/informatie.html">Schouders</a>
       </div>
       <h3>Instructies:</h3>
       <ol>
@@ -60,17 +61,6 @@
           <p>Laat de dumbells langzaam en gecontroleerd zakken, laat de zwaartekracht niet het werk doen. Nu ben je weer bij de begin positie.</p>
         </li>
       </ol>
-      <!-- <h3>Tips:</h3>
-      <ol>
-        <li>
-          <p>
-            Zorg ervoor dat je armen niet te ver naar buiten wijzen.</p>
-        </li>
-        <li>
-          <p>
-            Houd je ellebogen stil tijdens de oefening: gebruik geen momentum.</p>
-        </li>
-      </ol> -->
     </div>
   </main>
 
@@ -78,18 +68,18 @@
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis.png"></a>
+          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen.png"></a>
-          <p>Oefeningen</p>
-        </div>
-      </li>
+          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
+      </div>
+    </li>
       <li>
         <div>
-          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding.png"></a>
+          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
