--- a/oefeningen/oefeningen_per_spiergroep.html
+++ b/oefeningen/oefeningen_per_spiergroep.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +22,7 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Oefeningen per spiergroep</h1>
   </header>
 
@@ -29,32 +30,28 @@
 
     <div class="content-inner">
       <div class="termen-info">
-        <img id="information-icon" src="../public/afbeeldingen/information.png">
         <p>
           Elke spiergroep geeft een lijst van mogelijke oefeningen weer. Deze lijst is geen voorstelling van een volledige workout. Denk er aan: <span id="pop-up-term">compound-oefeningen</span> zijn belangrijker dan isolatie-oefeningen. Kies slim, en knallen maar!
         </p>
       </div>
 
-      <!--
--->
-
 <div id="pop-up-content" class="pop-up">
 
   <div class="pop-up-inner">
     <span class="close">&times;</span>
-    <h3>Compound-oefeningen</h3>
+    <h3>Compound<br>oefeningen</h3>
     <p>Oefeningen die verschillende spiergroepen tegelijk aanspreken. De Bench Press is hier een voorbeeld van. Deze target zowel de borst, als triceps en schouders.</p>
     <p>Het tegengestelde zijn isolatie-oefeningen, waarbij je slechts één spiergroep target per oefening. </p>
   </div>
 
 </div>
-
+</div>
 
       <ul class="oefeningen-lijst">
 
         <a href="abs/overzicht.html"><li>
           <img src="../public/afbeeldingen/Abs-oef.png">
-          <h3>Abs</h3>
+          <h3>Buik (Abs)</h3>
           <img id="forward-btn" src="../public/afbeeldingen/arrow_black_forward.png">
           </li>
           </a>
@@ -101,25 +98,24 @@
                 </li>
                 </a>
         </ul>
-    </div>
   </main>
 
   <footer id="footer-rood">
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis.png"></a>
+          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a>
-        <p>Oefeningen</p>
+          <a href="oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
       </div>
     </li>
       <li>
         <div>
-          <a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a>
+          <a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
