--- a/oefeningen/triceps/overzicht.html
+++ b/oefeningen/triceps/overzicht.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +22,7 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Triceps</h1>
   </header>
 
@@ -30,62 +31,63 @@
     <div class="content-inner">
       <img src="../../public/afbeeldingen/Triceps-oef.png" id="spier-img">
       <a id="meer-info-btn" href="informatie.html">Meer informatie</a>
-      <ul class="oefeningen-lijst">
-        <a href="#"><li>
-          <h3>Rope pushdown</h3>
+    </div>
+
+    <ul class="oefeningen-lijst">
+      <a href="#"><li>
+        <h3>Rope pushdown</h3>
+        <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
+        </li>
+        </a>
+
+        <a href="skullcrushers.html"><li>
+          <h3>Skullcrushers</h3>
           <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
           </li>
           </a>
 
-          <a href="skullcrushers.html"><li>
-            <h3>Skullcrushers</h3>
+          <a href="#"><li>
+            <h3>Close grip bench-press</h3>
             <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
             </li>
             </a>
 
             <a href="#"><li>
-              <h3>Close grip bench-press</h3>
+              <h3>Sitting tricep extension</h3>
               <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
               </li>
               </a>
 
               <a href="#"><li>
-                <h3>Sitting tricep extension</h3>
+                <h3>Close hands pushup</h3>
                 <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
                 </li>
                 </a>
 
-                <a href="#"><li>
-                  <h3>Close hands pushup</h3>
+                <a href="#"><li id="last-exercise">
+                  <h3>Standing dumbbell overhead tricep extension</h3>
                   <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
                   </li>
                   </a>
-
-                  <a href="#"><li id="last-exercise">
-                    <h3>Standing dumbbell overhead tricep extension</h3>
-                    <img id="forward-btn" src="../../public/afbeeldingen/arrow_black_forward.png">
-                    </li>
-                    </a>
-        </ul>
-    </div>
+      </ul>
   </main>
 
   <footer id="footer-rood">
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis.png"></a>
+          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen.png"></a>
-        <p>Oefeningen</p>
+          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
       </div>
     </li>
       <li>
         <div>
-          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding.png"></a>
+          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
