--- a/oefeningen/triceps/skullcrushers.html
+++ b/oefeningen/triceps/skullcrushers.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,19 +22,22 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Skullcrushers</h1>
   </header>
 
-  <main class="content-with-nav">
+  <main>
 
     <iframe class="video-container" width="100%" height="200px" src="https://www.youtube.com/embed/d_KZxkY_0cM?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div class="content-inner">
       <h3>Focus op:</h3>
       <div class="focus-spier">
-        <a class="primaire-spier" href="#">Triceps</a>
-        <!-- <a class="secundaire-spier" href="#">Rug</a> -->
+        <a class="primaire-spier" href="informatie.html">Triceps</a>
+        <!--
+        Ruimte voor secundaire spiergroep
+        <a class="secundaire-spier" href="#">Secundaire spier</a>
+      -->
       </div>
       <h3>Instructies:</h3>
       <ol>
@@ -68,18 +72,18 @@
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis.png"></a>
+          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen.png"></a>
-          <p>Oefeningen</p>
-        </div>
-      </li>
+          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
+      </div>
+    </li>
       <li>
         <div>
-          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding.png"></a>
+          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
