--- a/voeding/voeding_extra.html
+++ b/voeding/voeding_extra.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +22,7 @@
 
   <header id="header-groen">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Extra informatie</h1>
   </header>
 
@@ -68,14 +69,14 @@
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis.png"></a>
+          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
-      <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a></li>
+      <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-black.png"></a></li>
       <li id="active-tab-footer">
         <div>
-          <a href="voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a>
-          <p>Voeding</p>
+          <a href="voeding_start.html"><img src="../public/afbeeldingen/voeding-green.png"></a>
+          <p style="color: #6ab04c;">Voeding</p>
         </div>
       </li>
     </ul>
