--- a/oefeningen/rug/informatie.html
+++ b/oefeningen/rug/informatie.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,12 +22,18 @@
 
   <header id="header-rood">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Triceps (Musculus Triceps Brachii)</h1>
   </header>
 
   <main class="content-with-nav">
     <div class="content-inner">
+<img src="../../public/afbeeldingen/triceps_info.png">
+<p>De musculus triceps brachii (driehoofdige armstrekspier) is een grote driekoppige skeletspier bij de mens die de onderam strekt. De spier ligt langs de achterzijde van de bovenarm.
+  </p>
+  <p>De musculus triceps brachii wordt meestal eenvoudigweg de triceps genoemd. Deze term (Latijn voor "driehoofdig") kan echter gebruikt worden voor elke skeletspier met drie aanhechtingspunten. De triceps zorgt voor ongeveer zestig procent van de massa van de arm. Mensen die hun armspieren trainen met gewichten verwaarlozen vaak deze spiergroep ten voordele van de musculus biceps brachii. De triceps zorgt voor het strekken van de elleboog en werkt dus tegenovergesteld aan de biceps die voor de buiging zorgt.</p>
+  <p>De lange kop, het caput longum begint onder de gewrichtskom van het schouderblad (=de cavitas glenoidalis), bij een gedeelte dat het tuberculum infraglenoidale genoemd wordt. Deze lange kop zorgt naast de extensie ook voor adductie van de schouder. De beide andere delen (caput mediale en caput laterale) ontspringen aan de rugzijde van het opperarmbeen (humerus). De spier hecht aan bij het olecranon van de ellepijp.
+</p>
     </div>
   </main>
 
@@ -34,18 +41,18 @@
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis.png"></a>
+          <a href="../../basis/basis_start.html"><img src="../../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen.png"></a>
-        <p>Oefeningen</p>
+          <a href="../oefeningen_start.html"><img src="../../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
       </div>
     </li>
       <li>
         <div>
-          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding.png"></a>
+          <a href="../../voeding/voeding_start.html"><img src="../../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
